update setup command to remove the old origin

--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "setup": "code . && npm install && npm run start"
+    "setup": "code . && git remote remove origin && npm install && npm run start"
   },
   "eslintConfig": {
     "extends": [
