update install processe in setup command to install in offline mode with no security check

--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "setup": "git remote remove origin && npm install && npm run start"
+    "setup": "git remote remove origin && npm install --prefer-offline --no-audit && npm run start"
   },
   "eslintConfig": {
     "extends": [
